--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,3 @@
-@import 'node_modules/modern-normalize/modern-normalize.css';
+@import '../node_modules/normalize-scss/sass/normalize';
 @import './scss/reset';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
