--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -109,6 +109,7 @@ body {
     line-height: 1;
     font-family: 'Roboto', sans-serif;
     background-color: $darkness-main-black;
+    color: $snow-white;
 }
 
 ol,
