update(Icon, Header): header

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,4 +4,14 @@
     transition-property: background-color, border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+};
+
+@mixin container() {
+    display: block;
+
+    max-width: fit-content;
+    
+    margin: 0 auto;
+
+    padding: 0 20px;
+};
