--- a/src/components/global/Header/Header.module.scss
+++ b/src/components/global/Header/Header.module.scss
@@ -3,10 +3,10 @@
 .header__container {
     @include container();
 
+    width: 100%;
+
     padding-top: 24px;
     padding-bottom: 24px;
-
-    margin: 0 0;
 
     & span {
         font-size: 16px;
