--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -8,5 +8,8 @@ $christmas-tree-green: #3CBF61;
 
 $santas-node-red: #D80027;
 
-$snow-white: #EFEDE8;
+$silent-gray: #303030;
+$lonely-gray: #EFEDE899;
+
 $snow-alpha-white: #EFEDE84D;
+$snow-white: #EFEDE8;
