--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,7 +1,7 @@
 // mixins(transition, conrainer....)
 
 @mixin transition() {
-    transition-property: background-color, border-color;
+    transition-property: background-color, border-color, fill, color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 };
@@ -9,7 +9,7 @@
 @mixin container() {
     display: block;
 
-    max-width: 1440px;
+    max-width: 768px;
     
     margin: 0 auto;
 
