--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -2,4 +2,11 @@
     font-size: 24px;
     font-weight: 700;
     line-height: 1.1;
+
+    @media screen and (min-width: 768px) {
+        & {
+            font-size: 32px;
+            line-height: 1.3;
+        }
+    }
 }
