--- a/src/components/global/Header/Header.module.scss
+++ b/src/components/global/Header/Header.module.scss
@@ -33,3 +33,13 @@
         fill: $snow-alpha-white;
     }
 }
+.header__burgerMenu{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+
+    & use {
+    stroke: $christmas-main-orange;
+    }
+};
+
