--- a/src/components/SignIn/SignIn.module.scss
+++ b/src/components/SignIn/SignIn.module.scss
@@ -46,6 +46,9 @@
 
     background: transparent;
 
+    font-size: 16px;
+    line-height: 1.5;
+
     color: $snow-white;
 
     width: 100%;
@@ -106,13 +109,13 @@
 
     position: absolute;
 
-    top: 12px;
+    cursor: pointer;
+
+    top: 16px;
     right: 16px;
 
     & use {
         stroke: $snow-white;
-
-        cursor: pointer;
 
         @include transition();
 
