--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -20,6 +20,10 @@
     &:hover {
         background-color: $christmas-hover-orange;
     }
+
+    @media screen and (min-width: 768px) {
+        font-size: 20px;
+    }
 }
 
 .gray {
