--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -13,5 +13,13 @@
     
     margin: 0 auto;
 
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    @media screen and (min-width: 786px) {
+        padding-left: 32px;
+        padding-right: 32px;
+
+        max-width: 1440px;
+    }
 };
