--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,15 +1,15 @@
 $darkness-main-black: #040404;
 
-$christmas-main-orange: #E6533C;
-$christmas-hover-orange: #EF8964;
-$christmas-beige: #EFA082;
+$christmas-main-orange: #e6533c;
+$christmas-hover-orange: #ef8964;
+$christmas-beige: #efa082;
 
-$christmas-tree-green: #3CBF61;
+$christmas-tree-green: #3cbf61;
 
-$santas-node-red: #D80027;
+$santas-node-red: #d80027;
 
 $silent-gray: #303030;
-$lonely-gray: #EFEDE899; // 60%
+$lonely-gray: #efede899; // 60%
 
-$snow-alpha-white: #EFEDE84D; // 30%
-$snow-white: #EFEDE8;
+$snow-alpha-white: #efede84d; // 30%
+$snow-white: #efede8;
