--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,18 +4,17 @@
     transition-property: background-color, border-color, fill, color, stroke;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-};
+}
 
 @mixin container() {
     display: block;
 
     max-width: 768px;
-    
+
     margin: 0 auto;
 
     padding-left: 20px;
     padding-right: 20px;
-
 
     @media screen and (min-width: 768px) {
         padding-left: 32px;
@@ -28,4 +27,4 @@
         padding-left: 96px;
         padding-right: 96px;
     }
-};
+}
