--- a/src/components/pages/NotFound/NotFound.module.scss
+++ b/src/components/pages/NotFound/NotFound.module.scss
@@ -5,44 +5,44 @@
 .notfound__container {
     width: 100%;
     height: 100vh;
-    
-        background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-phone-min.jpg');
-        background-repeat: no-repeat;
-        background-position: bottom right;
-        position: relative;
-        background-size: contain;
-    
-        @media (min-device-pixel-ratio: 2),
+
+    background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-phone-min.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    position: relative;
+    background-size: contain;
+
+    @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-phone-2-min.jpg');
-        }
-    
-        @media screen and (min-width: 768px) {
-            background-image: url('../../../assets/backImg/side-view-people-training-gym-tablet-min.jpg');
-            background-size: contain;
-    
-            @media (min-device-pixel-ratio: 2),
+        background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-phone-2-min.jpg');
+    }
+
+    @media screen and (min-width: 768px) {
+        background-image: url('../../../assets/backImg/side-view-people-training-gym-tablet-min.jpg');
+        background-size: contain;
+
+        @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url('../../../assets/backImg/side-view-people-training-gym-tablet-2-min.jpg');
-            }
+            background-image: url('../../../assets/backImg/side-view-people-training-gym-tablet-2-min.jpg');
         }
-    
-        @media screen and (min-width: 1440px) {
-            background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-desk-min.jpg');
-            background-size: contain;
-    
-            @media (min-device-pixel-ratio: 2),
+    }
+
+    @media screen and (min-width: 1440px) {
+        background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-desk-min.jpg');
+        background-size: contain;
+
+        @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
-                background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-desk-2-min.jpg');
-            }
+            background-image: url('../../../assets/backImg/side-view-people-training-gym\ 1-desk-2-min.jpg');
         }
+    }
 
     & div {
         @include container();
-        background-color: #E6533C;
+        background-color: #e6533c;
         height: 100vb;
         width: 240px;
         margin: 0 0;
@@ -52,12 +52,11 @@
         flex-direction: column;
 
         @media screen and (min-width: 768px) {
-        width: 420px;
+            width: 420px;
         }
         @media screen and (min-width: 1440px) {
-        width: 670px;
+            width: 670px;
         }
-
     }
 
     & h1 {
@@ -70,16 +69,16 @@
         margin-bottom: 14px;
 
         @media screen and (min-width: 768px) {
-        font-size: 160px;
-        line-height: 150px;
-        letter-spacing: 1.6px;
-        margin-top: 260px;
-        margin-bottom: 28px;
+            font-size: 160px;
+            line-height: 150px;
+            letter-spacing: 1.6px;
+            margin-top: 260px;
+            margin-bottom: 28px;
         }
         @media screen and (min-width: 1440px) {
-        margin-top: 172px;
+            margin-top: 172px;
         }
-}
+    }
     & p {
         color: $snow-white;
         font-size: 14px;
@@ -87,39 +86,37 @@
         line-height: 18px;
         margin-bottom: 28px;
 
-     @media screen and (min-width: 768px) {
-        font-size: 16px;
-        line-height: 24px;
+        @media screen and (min-width: 768px) {
+            font-size: 16px;
+            line-height: 24px;
         }
- }
+    }
 }
 
-.info__container{
+.info__container {
     & span {
-            font-size: 16px;
-            font-weight: 600;
-        
+        font-size: 16px;
+        font-weight: 600;
+
         @media screen and (min-width: 768px) {
+        }
+    }
 
-        }
+    & a span {
+        color: $snow-white;
+        @include transition();
+    }
 
-        }
-    
-        & a span {
-            color: $snow-white;
-            @include transition();
-        }
-    
-        & a use {
-            fill: $snow-white;
-            @include transition();
-        }
-    
-        & a:hover span {
-            color: $snow-alpha-white;
-        }
-    
-        & a:hover use {
-            fill: $snow-alpha-white;
-        }
+    & a use {
+        fill: $snow-white;
+        @include transition();
+    }
+
+    & a:hover .info__logo_text {
+        color: $snow-alpha-white;
+    }
+
+    & a:hover use {
+        fill: $snow-alpha-white;
+    }
 }
