--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -3,7 +3,8 @@
 .burgerMenu {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
+    max-width: 50vw;
     width: 100%;
     height: 100%;
     background-color: $christmas-main-orange;
@@ -12,7 +13,7 @@
 };
 
 .burgerButton {
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 10px;
     z-index: 1000;
@@ -37,21 +38,28 @@
     margin-bottom: 16px;
 };
 
-.menuItems button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+
+.logoutButton {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    bottom: 20px;
+    left: 20px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
     font-size: 14px;
     line-height: 18px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 27px;
-    padding-left: 27px;
-    border-radius: 12px;
-    border: 1px solid $snow-white;
+    font-weight: 400;
     color: $snow-white;
-    background-color: $christmas-main-orange;
-};
 
-.logoutButton{
-    color: red
+    & use {
+        stroke: $snow-white;
+        fill: transparent;
+    }
+
+    @media (min-width: 768px) {
+    line-height: 24px;
+    font-size: 16px;
+     }
 }
