--- a/src/components/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/ProductsFilters/ProductsFilters.module.scss
@@ -6,22 +6,22 @@
     margin-right: auto;
     margin-left: auto;
 
-}
+};
 
 .input {
     width: 335px;
     height: 46px;
     border-radius: 12px;
-}
+};
 
 .categories{
     width: 146px;
     height: 46px;
     border-radius: 12px;
-}
+};
 
 .select {
     width: 173px;
     height: 46px;
     border-radius: 12px;
-}
+};
