feature(Modal): Modal compoent and styles + adative added

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,6 @@
 $darkness-main-black: #040404;
+$darkness-modal-black: #10100F;
+$modal-black-bg: #04040466; // 40%
 
 $christmas-main-orange: #e6533c;
 $christmas-hover-orange: #ef8964;
@@ -10,6 +12,7 @@ $santas-node-red: #d80027;
 
 $silent-gray: #303030;
 $lonely-gray: #efede899; // 60%
+$lonely-modal-gray: #EFEDE833; //20%
 
 $snow-alpha-white: #efede84d; // 30%
 $snow-white: #efede8;
