Bugfix(Header and NotFound): add media rules for logo

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,5 +1,5 @@
 $darkness-main-black: #040404;
-$darkness-modal-black: #10100F;
+$darkness-modal-black: #10100f;
 $modal-black-bg: #04040466; // 40%
 
 $christmas-main-orange: #e6533c;
@@ -12,7 +12,7 @@ $santas-node-red: #d80027;
 
 $silent-gray: #303030;
 $lonely-gray: #efede899; // 60%
-$lonely-modal-gray: #EFEDE833; //20%
+$lonely-modal-gray: #efede833; //20%
 
 $snow-alpha-white: #efede84d; // 30%
 $snow-white: #efede8;
