--- a/src/components/pages/NotFound/NotFound.module.scss
+++ b/src/components/pages/NotFound/NotFound.module.scss
@@ -94,11 +94,19 @@
 }
 
 .info__container {
+    & a {
+        display: flex;
+        align-items: flex-end;
+    }
+
     & span {
         font-size: 16px;
         font-weight: 600;
+        line-height: 12px;
 
         @media screen and (min-width: 768px) {
+            font-size: 19px;
+            line-height: 17px;
         }
     }
 
