--- a/src/components/pages/DiaryPage/Diary/Diary.modules.scss
+++ b/src/components/pages/DiaryPage/Diary/Diary.modules.scss
@@ -18,6 +18,10 @@
     background: $christmas-main-orange;
     border: 1px solid rgba(239, 237, 232, 0.2);
 }
+.box
+{
+    background: rgba(239, 237, 232, 0.05);
+}
 
 .dairy
 {
