--- a/src/components/pages/DiaryPage/Products/Products.modules.scss
+++ b/src/components/pages/DiaryPage/Products/Products.modules.scss
@@ -16,7 +16,27 @@
     border: 1px solid rgba(239, 237, 232, 0.20);
     background: rgba(239, 237, 232, 0.05);
     margin-bottom: 40px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    &::-webkit-scrollbar
+    {
+        width: 6px; /* ширина для вертикального скролла */
+        height: 203px; /* высота для горизонтального скролла */
+        background-color: #143861;
+    }
+    &::-webkit-scrollbar-thumb
+    {
+        background-color: #843465;
+        border-radius: $main-b-radius;
+        box-shadow: inset 1px 1px 10px #f3faf7;
+    }
+    &::-webkit-scrollbar-track
+    {
+        background-color: #253861;
+    }
 }
+
+
 .products_item
 {
     display: flex;
