--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -21,6 +21,10 @@
         background-color: $christmas-hover-orange;
     }
 
+    &:active {
+        background-color: $christmas-beige;
+    }
+
     @media screen and (max-width: 375px) {
         font-size: 14px;
     }
@@ -39,6 +43,10 @@
         background-color: transparent;
 
         border-color: $christmas-main-orange;
+    }
+
+    &:active {
+        background-color: $darkness-modal-black;
     }
 }
 
