--- a/src/components/ProductsItem/ProductsItem.module.scss
+++ b/src/components/ProductsItem/ProductsItem.module.scss
@@ -3,7 +3,6 @@
 .item {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     width: 335px;
     height: 141px;
     border-radius: 12px;
@@ -13,6 +12,9 @@
 };
 .item_container {
     display: flex;
+    align-items: center;
+    margin-bottom: 35px;
+    
 };
 
 .diet {
@@ -25,7 +27,55 @@
     font-size: 12px;
     line-height: 14px;
 };
+
+.button_container {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    gap: 16px;
+};
+
+.text {
+    color: #EFEDE8;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.5;
+};
+
+.button {  
+    display: flex;
+    color: #E6533C;
+    background-color: transparent;
+    border: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.3;
+   
+
+};
+
+.title_container {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 8px;
+};
+
+.title {
+    font-weight: 400;
+    font-size: 20;
+    line-height: 1.2;
+}
+
+
 .item_list_container {
     display: flex;
     gap: 16px;
+
+    & p {
+        color: #EFEDE866;
+        font-weight: 400;
+        font-size: 12;
+        line-height: 1.5;
+    }
+
 };
