--- a/src/components/pages/ExercisesPage/ExercisesPage.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesPage.module.scss
@@ -6,7 +6,7 @@
     @include container();
     width: 320px;
     padding-top: 40px;
-}
+};
 
 @media screen and (min-width: 375px) {
     .section {
@@ -15,11 +15,11 @@
         justify-content: space-between;
         align-items: center;
     }
-}
+};
 
 @media screen and (min-width: 768px) {
     .section {
         padding-top: 72px;
         margin-bottom: 64px;
     }
-    }
+    };
