--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -5,14 +5,17 @@ $modal-black-bg: #04040466; // 40%
 $christmas-main-orange: #e6533c;
 $christmas-hover-orange: #ef8964;
 $christmas-beige: #efa082;
+$calendar-main: rgba(239, 137, 100, 1);
 
 $christmas-tree-green: #3cbf61;
 
 $santas-node-red: #d80027;
 
+
 $silent-gray: #303030;
 $lonely-gray: #efede899; // 60%
 $lonely-modal-gray: #efede833; //20%
 
+$calendar-white: rgba(239, 237, 232, 1);
 $snow-alpha-white: #efede84d; // 30%
 $snow-white: #efede8;
