feature(All App): format commad done

--- a/src/components/global/Header/Header.module.scss
+++ b/src/components/global/Header/Header.module.scss
@@ -52,7 +52,7 @@
         fill: $christmas-main-orange;
     }
 }
-.header__burgerMenu{
+.header__burgerMenu {
     background-color: transparent;
     border: none;
     padding: 0;
@@ -74,5 +74,4 @@
     @media (min-width: 1440px) {
         display: none;
     }
-};
-
+}
