--- a/src/components/ui/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/ui/BurgerMenu/BurgerMenu.module.scss
@@ -1,5 +1,5 @@
-@import '../../scss/colors';
-@import '../../scss/mixins';
+@import '../../../scss/colors';
+@import '../../../scss/mixins';
 
 .burgerMenu__container {
     position: fixed;
