--- a/src/components/ui/Calendar/Calendar._mixins.scss
+++ b/src/components/ui/Calendar/Calendar._mixins.scss
@@ -28,7 +28,7 @@
 @mixin positionDisplay {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 @mixin positionSpaceBetween {
