refactoring(All): file system

--- a/src/components/global/Welcome/Welcome.module.scss
+++ b/src/components/global/Welcome/Welcome.module.scss
@@ -1,6 +1,6 @@
-@import '../../scss/mixins';
-@import '../../scss/variables';
-@import '../../scss/colors';
+@import '../../../scss/mixins';
+@import '../../../scss/variables';
+@import '../../../scss/colors';
 
 .welcome__container {
     @include container();
