--- a/src/components/auth/SignIn/SignIn.module.scss
+++ b/src/components/auth/SignIn/SignIn.module.scss
@@ -1,6 +1,6 @@
-@import '../../scss/colors';
-@import '../../scss/mixins';
-@import '../../scss/variables';
+@import '../../../scss/colors';
+@import '../../../scss/mixins';
+@import '../../../scss/variables';
 
 .signin_container {
     @include container();
