--- a/src/components/auth/SignIn/SignIn.module.scss
+++ b/src/components/auth/SignIn/SignIn.module.scss
@@ -170,3 +170,12 @@
         }
     }
 }
+
+
+.error__text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.3;
+    
+    max-width: 280px;
+}
