--- a/src/components/ui/ModalContent/ModalContent.module.scss
+++ b/src/components/ui/ModalContent/ModalContent.module.scss
@@ -69,3 +69,13 @@
         fill: $santas-node-red;
     }
 }
+
+.error__title {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.3;
+    text-align: center;
+
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
