--- a/src/components/ui/Calendar/Calendar.scss
+++ b/src/components/ui/Calendar/Calendar.scss
@@ -256,6 +256,8 @@
 .react-datepicker__day-name,
 .react-datepicker__day {
     font-family: 'Roboto', sans-serif;
+
+    cursor: pointer;
 }
 
 .react-datepicker__day--012,
