feature(Header): fixxxx

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -110,6 +110,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: $darkness-main-black;
     color: $snow-white;
+    overflow-x: hidden;
 }
 
 ol,
