--- a/src/components/ui/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/ui/BurgerMenu/BurgerMenu.module.scss
@@ -11,6 +11,10 @@
     background-color: $christmas-main-orange;
     z-index: 20;
     padding: 20px;
+
+    @media screen and (min-width: 1440px) {
+        display: none;
+    }
 }
 
 .burger__button {
