--- a/src/components/ui/ModalContent/ModalContent.module.scss
+++ b/src/components/ui/ModalContent/ModalContent.module.scss
@@ -59,12 +59,12 @@
 }
 
 .error {
-    background-color: rgb(61 8 8 / 50%);;
+    background-color: rgb(61 8 8 / 50%);
 }
 
 .modal__svg {
     max-width: fit-content;
-    
+
     margin: 0 auto;
 
     & use {
